handle call fe to be